automating program esction, some other details

--- a/public/css/estilosGenerales.less
+++ b/public/css/estilosGenerales.less
@@ -320,6 +320,10 @@ body {
         margin-bottom: 5px;
         border-radius: 15px;
 
+        &.selected {
+          background-image: linear-gradient(#e2e2e2, #979797);
+        }
+
         &:hover {
           background-image: linear-gradient(#ffffff, #d1d1d1);
         }
