change width container and behavior responsive to publicidad

--- a/public/css/estilosGenerales.less
+++ b/public/css/estilosGenerales.less
@@ -416,7 +416,7 @@ body {
   .publicidad {
 
     img {
-      width: 100%;
+      width: 100px;
       margin-bottom: 20px;
     }
   }
@@ -524,4 +524,10 @@ body {
   .btn-default {
     background: #efefef;
   }
+}
+
+// remove margin from bootstrap .container
+
+.container {
+  max-width: none;
 }
