--- a/templates/front/portada.html.twig
+++ b/templates/front/portada.html.twig
@@ -12,7 +12,7 @@
         </div>
         <br/>
         <div class="row">
-            <div class="col-xs-10">
+            <div class="col-lg-11 col-md-10">
                 <h3 class="pull-left"><i class="fa fa-file-o"></i> {{ 'vehiculos.subidos' | trans }}</h3>
 
                 <form class="pull-right">
@@ -56,7 +56,7 @@
                     {{ render(controller('App\\Controller\\VehiculoController::vehiculosActualizadosAction', {tiempo: '-30 day'})) }}
                 </div>
             </div>
-            <div class="col-xs-2 publicidad">
+            <div class="col-lg-1 col-md-2 publicidad">
                 <a href="http://direccion.com">
                     <img src="{{ asset('img/publicidad/ByFtp-Opt.png') }}" alt="ByFtp-Opt"/>
                 </a>
