--- a/templates/front/portada.html.twig
+++ b/templates/front/portada.html.twig
@@ -13,7 +13,7 @@
         <br/>
         <div class="row">
             <div class="col-lg-11 col-md-10">
-                <h3 class="pull-left"><i class="fa fa-file-o"></i> {{ 'vehiculos.subidos' | trans }}</h3>
+                <h2 class="pull-left"><img src="{{ asset('img/btnNew.png') }}" width="50px" /> {{ 'vehiculos.subidos' | trans }}</h2>
 
                 <form class="pull-right">
                     <select name="selectTiempoVehiculosSubidos" id="selectTiempoVehiculosSubidos" class="form-control">
@@ -37,7 +37,7 @@
                 <br/>
                 <br/>
 
-                <h3 class="pull-left"><i class="fa fa-refresh"></i> {{ 'vehiculos.actualizados' | trans }}</h3>
+                <h2 class="pull-left"><img src="{{ asset('img/btnUpdate.jpg') }}" width="50px" />  {{ 'vehiculos.actualizados' | trans }}</h2>
 
                 <form class="pull-right">
                     <select name="selectTiempoVehiculosActualizados" id="selectTiempoVehiculosActualizados"
