--- a/templates/modal/contacto.html.twig
+++ b/templates/modal/contacto.html.twig
@@ -22,12 +22,13 @@
         <hr class="verificacion-robots"/>
         <label for="verificacion" class="verificacion-robots">{{ 'verificacion.robots' | trans }}</label>
         <input name="verificacion_robots" class="verificacion-robots form-control" />
-        <div class="g-recaptcha" data-sitekey="6LeNDzsUAAAAAF3eHINBG760-PLtVl374edsvihK"></div>
+        <br/>
+        <div class="g-recaptcha" data-callback="removeDisabledFromButton" data-sitekey="{{recaptcha}}"></div>
         <br/>
     </form>
 {% endblock %}
 
 {% block botones %}
     <button type="button" class="btn btn-default" data-dismiss="modal">{{ 'cancelar' | trans }}</button>
-    <button type="button" class="btn btn-primary" id="btn-enviar-contacto">{{ 'enviar' | trans }}</button>
+    <button disabled type="button" class="btn btn-primary" id="btn-enviar-contacto">{{ 'enviar' | trans }}</button>
 {% endblock %}
