fixing emails and some translations

--- a/templates/inc/footer.html.twig
+++ b/templates/inc/footer.html.twig
@@ -11,13 +11,13 @@
     <div class="container">
         <div class="col-sm-3 col-xs-12">
             <h3>{{ 'contacto' | trans }}</h3>
-            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">info@infotaller.org</a></p>
-            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">despieces@infotaller.org</a></p>
-            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">contactar@infotaller.org</a></p>
+            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">info@infotaller.net</a></p>
+            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">despieces@infotaller.net</a></p>
+            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">contactar@infotaller.net</a></p>
         </div>
         <div class="col-sm-3 col-xs-12">
             <h3>{{ 'soporte' | trans }}</h3>
-            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">support@infotaller.org</a></p>
+            <p><i class="fa fa-envelope"></i> <a  data-toggle="modal" href="#modal_contacto" class="contacto">support@infotaller.net</a></p>
         </div>
                  
     </div>
