--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,22 +31,21 @@
 
 {% include 'inc/footer.html.twig' %}
 
-<!-- Piwik -->
+<!-- Matomo -->
 <script type="text/javascript">
-    var _paq = _paq || [];
-    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function() {
-        // TODO: change this url to piwik url
-        var u="//localhost/piwik/";
-        _paq.push(['setTrackerUrl', u+'piwik.php']);
-        _paq.push(['setSiteId', '1']);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-    })();
+  var _paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//analisisweb.cubahosting.net/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '2']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
 </script>
-<!-- End Piwik Code -->
+<!-- End Matomo Code -->
 
 <script src='https://www.google.com/recaptcha/api.js?hl={{app.request.locale}}'></script>
 <script src="{{ asset('vendor/jquery/js/jquery.js') }}"></script>
@@ -55,7 +54,7 @@
 <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('vendor/bootstrap/js/less.min.js') }}"></script>
 
-<script src="{{ asset('vendor/alertify/js/alertify.js') }}"></script>
+<script src="{{ asset('vendor/alertify/js/alertify.min.js') }}"></script>
 
 <script src="{{ asset('js/pantallaCargando.js') }}"></script>
 <script src="{{ asset('js/validaciones.js') }}"></script>
