--- a/templates/modal/contacto.html.twig
+++ b/templates/modal/contacto.html.twig
@@ -23,12 +23,20 @@
         <label for="verificacion" class="verificacion-robots">{{ 'verificacion.robots' | trans }}</label>
         <input name="verificacion_robots" class="verificacion-robots form-control" />
         <br/>
-        <div class="g-recaptcha" data-callback="removeDisabledFromButton" data-sitekey="{{recaptcha}}"></div>
+        <input type="hidden" id="g-recaptcha-response-contact" name="g-recaptcha-response" />
         <br/>
     </form>
 {% endblock %}
 
 {% block botones %}
+    <script src="https://www.google.com/recaptcha/api.js?hl={{app.request.locale}}&render={{recaptcha}}"></script>
+    <script>
+        grecaptcha.ready(function() {
+            grecaptcha.execute('{{recaptcha}}', {action: 'contact'}).then(function(token) {
+                $('#g-recaptcha-response-contact').val(token);
+            });
+        });
+    </script>
     <button type="button" class="btn btn-default" data-dismiss="modal">{{ 'cancelar' | trans }}</button>
-    <button disabled type="button" class="btn btn-primary" id="btn-enviar-contacto">{{ 'enviar' | trans }}</button>
+    <button type="button" class="btn btn-primary" id="btn-enviar-contacto">{{ 'enviar' | trans }}</button>
 {% endblock %}
